--- a/ezwel_project/ezwel_if_demo/.settings/org.eclipse.wst.common.component
+++ b/ezwel_project/ezwel_if_demo/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="ezwel_framework-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ezwel_framework/ezwel_framework">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="ezwel_if_demo"/>
         <property name="java-output-path" value="/ezwel_if_demo/target/classes"/>
     </wb-module>
