--- a/ezwel_project/ezwel_if_server/src/main/webapp/resources/common/css/common.css
+++ b/ezwel_project/ezwel_if_server/src/main/webapp/resources/common/css/common.css
@@ -8,6 +8,10 @@ h2, span {
 	color: #ffffff;
 }
 
+div#mainContiner div {
+	padding: 0px 10px 0px 10px;	
+}
+
 span.title {
 	size:16pt;
 	font-weight:bold;
@@ -21,7 +25,8 @@ h3 {
 ul {
 	list-style: none;
 	margin: 0;
-	padding: 0px 10px 0px 10px;
+	padding: 0;
+	position:relative;
 }
 
 li {
